# docs-mintlify

./: .gitignore  README.md  index.mdx  logs.txt  mint.json  package-lock.json  package.json  pyproject.toml
01-tutorials/: 00-installation.mdx  01-your-first-agent.mdx  02-android-automation.mdx  03-web-automation-patterns.mdx  tutorials-overview.mdx
01-tutorials/example-automations/: 00-overview.mdx  01-online-casino.mdx  02-plc-water-tank.mdx  03-tic-tac-toe.mdx  04-android-automation.mdx  05-infotainment-systems.mdx  06-web-shopping.mdx
01-tutorials/install/: 00-uninstall.mdx  01-silent-windows-uninstall.mdx
02-api-reference/01-api-reference/: 00-table.mdx  01-actions.mdx  02-elements.mdx  03-relations.mdx  04-getters.mdx  05-assertions.mdx
02-api-reference/02-agent-os/: 00-overview.mdx  01-development-environment.mdx  02-controller.mdx  AskUI-StartController-v2.mdx
02-api-reference/02-askui-suite/: 02-proxy.mdx
02-api-reference/03-agent-environment/: 01-installer.mdx  02-askui-shell.mdx  AskUI-StartController-v2.md  AskUI-StartController.md  AskUI-StartController.mdx
02-api-reference/04-agent-hub/: 01-runner.mdx  02-repository.mdx
02-api-reference/05-askui-inference/: check-if-image-required.mdx  inference.mdx  predict.mdx  train-pta.mdx  train.mdx  validate-instruction.mdx  vqa-inference.mdx
02-api-reference/07-account-management/: 04-usage-api.mdx  05-audit-api.mdx
02-api-reference/07-workspace-service/: 01-workspaces-api.mdx  02-billing-api.mdx  03-user-api.mdx
02-how-to-guides/: 06-configure-different-models.mdx  how-to-overview.mdx
02-how-to-guides/01-account-management/: 01-account-management.mdx  02-members-management.mdx  03-usage-billing-dashboard.mdx  04-tokens.mdx  05-billing.mdx
02-how-to-guides/02-integrations/: 01-github.mdx  02-gitlab.mdx  06-reporters.mdx  07-sso.mdx  10-ide-setup.mdx  11-allure-reporting.mdx
02-how-to-guides/04-troubleshooting/: 00-troubleshooting-overview.mdx  01-installation-and-setup-issues.mdx  02-network-and-connectivity.mdx  03-element-detection-and-ocr.mdx  04-data-extraction.mdx  05-runtime-and-environment-errors.mdx  06-reporting-bugs-and-getting-help.mdx  08-known-issues.mdx
02-how-to-guides/05-build-ai-agents/: 00-build-ai-agents-overview.mdx  01-act-towards-goal.mdx  02-select-elements.mdx  05-work-with-forms.mdx  06-interact-with-elements.mdx  07-managing-credentials.mdx  (+2 more)
03-explanation/: 05-glossary.mdx  explanation-overview.mdx
04-reference/: ai-models.mdx  environment-variables.mdx  network-requirements.mdx  system-requirements.mdx
05-additional-resources/: trust-center.mdx
06-agent-os/: capabilities.mdx  concepts.mdx  configuration.mdx  control-modes.mdx  deployment-ci.mdx  deployment-local.mdx  deployment-multi-device.mdx  deployment-scenarios.mdx  index.mdx  installation.mdx  quickstart.mdx  release-notes.mdx  runtime-modes.mdx  troubleshooting.mdx  vs-remote-control.mdx
agent-os/: capabilities.mdx  configuration.mdx  deployment-scenarios.mdx  index.mdx  installation.mdx  uninstallation.mdx
define-tasks/: csv-format.mdx  examples.mdx  index.mdx  natural-language.mdx
development-guides/: index.mdx
extend-your-agent/: agentic-development.mdx  bring-your-model.mdx  caching.mdx  custom-tools.mdx  platform-agents.mdx
get-started/: custom-tools.mdx  how-it-works.mdx  installation-setup.mdx  quickstart.mdx  running-the-agent.mdx  understanding-askui.mdx
introduction/: 01-changelog.mdx  02-release-notes.mdx  03-troubleshooting.mdx  04-glossary.mdx  05-faq.mdx
snippets/: agent-os-mobile-setup.mdx  custom-word-level-model-on-step-level.mdx  model-composition-default-word-level-on-step-level.mdx  model-composition-sentence-level-on-global-level.mdx  model-composition-sentence-level-on-step-level.mdx  model-composition-word-level-on-global-level.mdx  model-composition-word-level-on-step-level.mdx  new-ai-element.mdx  re-teaching-ocr-sentence-level.mdx
(+504 files in other folders)
